	PR sim/14540 	* armsupp.c (ARMul_MRC): Return 0 if access to the MRC instruction 	is denied.