sim/arm/armsupp.c
@@ -636,7 +636,7 @@ ARMul_MRC (ARMul_State * state, ARMword instr)
   if (! CP_ACCESS_ALLOWED (state, CPNum))
     {
       ARMul_UndefInstr (state, instr);
-      return;
+      return result;
     }
 
   cpab = (state->MRC[CPNum]) (state, ARMul_FIRST, instr, &result);
